@@ -134,7 +134,7 @@ SHORT fasp_amg_setup_rs (AMG_data   *mgl,
 
         /*-- Setup Schwarz smoother if needed --*/
         if ( lvl < param->Schwarz_levels ) {
-            mgl[lvl].Schwarz.A = fasp_dcsr_sympat(&mgl[lvl].A);
+            mgl[lvl].Schwarz.A = fasp_dcsr_sympart(&mgl[lvl].A);
             fasp_dcsr_shift(&(mgl[lvl].Schwarz.A), 1);
             fasp_Schwarz_setup(&mgl[lvl].Schwarz, &swzparam);
         }
