@@ -1,12 +1,14 @@
 File Name: CHANGES
 
-01/14/2017 FASP 1.9.0:
+01/15/2017 FASP 1.9.0:
 - Separate data structures and routines for reservoir simulation from base.
 - Change block_iCSRmat to iBLCmat and corresponding functions.
 - Delete some deprecated functions.
 - Fix a bug in interpolation.c: reported by Liu Hui.
 - Remove ilu.f from SparseKit.
 - Clean up GMG code.
+- Fix a typo: _sympat ==> _sympart.
+- File name change: _block.c ==> _blc.c. 
 
 01/10/2017 FASP 1.8.9:
 - Fix some memory leaks in AMG setup routines while early termination.
